tests/error/error01.correct
attempt to invoke 'object' value as a function
